예매 비동기, SAGA패턴, 분산락 적용 및 테스트 코드 수정