@@ -12,29 +12,36 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.redisson.api.RLock;
+import org.redisson.api.RedissonClient;
 
 import java.time.LocalDateTime;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.TimeUnit;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.argThat;
+import static org.mockito.ArgumentMatchers.anyLong;
+import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.BDDMockito.given;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
-public class ReservationServiceTest {
+class ReservationServiceTest {
 
     @Mock
     private ReservationRepository reservationRepository;
-
     @Mock
     private ConcertServiceClient concertServiceClient;
+    @Mock
+    private RedissonClient redissonClient;
+    @Mock
+    private RLock lock;
 
     @InjectMocks
     private ReservationService reservationService;
@@ -49,19 +56,78 @@ public class ReservationServiceTest {
                 .userEmail("test@example.com")
                 .quantity(2L)
                 .status(ReservationStatus.PENDING)
-                .reservedAt(LocalDateTime.now())
                 .build();
     }
 
     @Test
-    @DisplayName("예매 생성 성공 테스트")
-    void createReservation_Success() {
+    @DisplayName("비동기 예매 생성 성공")
+    void createReservationAsync_Success() throws InterruptedException {
         // given
         Long concertId = 100L;
         String userEmail = "test@example.com";
         Long quantity = 2L;
 
+        when(redissonClient.getLock(anyString())).thenReturn(lock);
+        given(lock.tryLock(anyLong(), anyLong(), any(TimeUnit.class))).willReturn(true);
+        // 락 해제를 위해 현재 스레드가 락을 보유했다고 명시
+        given(lock.isHeldByCurrentThread()).willReturn(true);
         given(concertServiceClient.checkAvailability(concertId, quantity)).willReturn(true);
+        given(concertServiceClient.reserveSeats(concertId, quantity)).willReturn(true);
+        given(reservationRepository.save(any(Reservation.class))).willReturn(sampleReservation);
+
+        // when
+        CompletableFuture<ReservationResponse> future = reservationService.createReservationAsync(concertId, userEmail, quantity);
+
+        // then
+        ReservationResponse response = future.join();
+        assertThat(response).isNotNull();
+        assertThat(response.getReservationId()).isEqualTo(1L);
+        assertThat(response.getStatus()).isEqualTo(ReservationStatus.PENDING);
+        verify(reservationRepository).save(any(Reservation.class));
+        verify(lock).unlock();
+    }
+
+    @Test
+    @DisplayName("비동기 예매 생성 실패 - 좌석 부족")
+    void createReservationAsync_Failure_NotAvailable() throws InterruptedException {
+        // given
+        Long concertId = 100L;
+        String userEmail = "test@example.com";
+        Long quantity = 100L;
+
+        when(redissonClient.getLock(anyString())).thenReturn(lock);
+        when(lock.isHeldByCurrentThread()).thenReturn(true);
+        given(lock.tryLock(anyLong(), anyLong(), any(TimeUnit.class))).willReturn(true);
+        given(concertServiceClient.checkAvailability(concertId, quantity)).willReturn(false);
+
+        // when
+        CompletableFuture<ReservationResponse> future = reservationService.createReservationAsync(concertId, userEmail, quantity);
+
+        // then
+        assertThatThrownBy(future::join)
+                .hasCauseInstanceOf(IllegalStateException.class)
+                .hasMessageContaining("예매 가능한 수량이 부족합니다");
+
+        verify(reservationRepository, never()).save(any(Reservation.class));
+        verify(lock).tryLock(anyLong(), anyLong(), any(TimeUnit.class));
+        verify(lock).isHeldByCurrentThread();
+        verify(lock).unlock();
+    }
+
+    @Test
+    @DisplayName("예매 생성 성공")
+    void createReservation_Success() throws InterruptedException {
+        // given
+        Long concertId = 100L;
+        String userEmail = "test@example.com";
+        Long quantity = 2L;
+
+        when(redissonClient.getLock(anyString())).thenReturn(lock);
+        given(lock.tryLock(anyLong(), anyLong(), any(TimeUnit.class))).willReturn(true);
+        // 락 보유 상태를 명시적으로 설정
+        given(lock.isHeldByCurrentThread()).willReturn(true);
+        given(concertServiceClient.checkAvailability(concertId, quantity)).willReturn(true);
+        given(concertServiceClient.reserveSeats(concertId, quantity)).willReturn(true);
         given(reservationRepository.save(any(Reservation.class))).willReturn(sampleReservation);
 
         // when
@@ -72,68 +138,132 @@ public class ReservationServiceTest {
         assertThat(response.getReservationId()).isEqualTo(1L);
         assertThat(response.getStatus()).isEqualTo(ReservationStatus.PENDING);
         verify(reservationRepository).save(any(Reservation.class));
+        verify(lock).unlock();
     }
 
     @Test
-    @DisplayName("예매 생성 실패 - 콘서트 예매 불가")
-    void createReservation_Failure_NotAvailable() {
+    @DisplayName("예매 생성 실패 - 락 획득 실패")
+    void createReservation_FailToAcquireLock() throws InterruptedException {
         // given
         Long concertId = 100L;
         String userEmail = "test@example.com";
-        Long quantity = 100L;
+        Long quantity = 2L;
 
-        given(concertServiceClient.checkAvailability(concertId, quantity)).willReturn(false);
+        when(redissonClient.getLock(anyString())).thenReturn(lock);
+        given(lock.tryLock(anyLong(), anyLong(), any(TimeUnit.class))).willReturn(false);
 
         // when & then
         assertThatThrownBy(() ->
-                reservationService.createReservation(concertId, userEmail, quantity))
+                reservationService.createReservation(concertId, userEmail, quantity)
+        )
                 .isInstanceOf(IllegalStateException.class)
-                .hasMessageContaining("예매 가능한 수량이 부족합니다");
+                .hasMessage("예매를 처리할 수 없습니다. 잠시 후 다시 시도해주세요.");
 
         verify(reservationRepository, never()).save(any(Reservation.class));
     }
 
     @Test
-    @DisplayName("예매 취소 성공 테스트")
+    @DisplayName("예매 생성 실패 - 좌석 예약 실패")
+    void createReservation_FailToReserveSeats() throws InterruptedException {
+        // given
+        Long concertId = 100L;
+        String userEmail = "test@example.com";
+        Long quantity = 2L;
+
+        when(redissonClient.getLock(anyString())).thenReturn(lock);
+        given(lock.tryLock(anyLong(), anyLong(), any(TimeUnit.class))).willReturn(true);
+        // 락 보유 상태를 명시적으로 설정
+        given(lock.isHeldByCurrentThread()).willReturn(true);
+        given(concertServiceClient.checkAvailability(concertId, quantity)).willReturn(true);
+        given(concertServiceClient.reserveSeats(concertId, quantity)).willReturn(false);
+
+        // when & then
+        assertThatThrownBy(() ->
+                reservationService.createReservation(concertId, userEmail, quantity)
+        )
+                .isInstanceOf(IllegalStateException.class)
+                .hasMessage("좌석 예매에 실패했습니다.");
+
+        verify(reservationRepository, never()).save(any(Reservation.class));
+        verify(lock).unlock();
+    }
+
+    @Test
+    @DisplayName("예매 취소 성공")
     void cancelReservation_Success() {
         // given
         Long reservationId = 1L;
         String userEmail = "test@example.com";
 
         given(reservationRepository.findById(reservationId)).willReturn(Optional.of(sampleReservation));
+        given(concertServiceClient.rollbackReserveSeats(anyLong(), anyLong())).willReturn(true);
 
         // when
         reservationService.cancelReservation(reservationId, userEmail);
 
         // then
-        verify(reservationRepository).save(argThat(reservation ->
-                reservation.getStatus() == ReservationStatus.CANCELLED &&
-                        reservation.getCancelledAt() != null
-        ));
+        verify(reservationRepository).save(any(Reservation.class));
+        assertThat(sampleReservation.getStatus()).isEqualTo(ReservationStatus.CANCELLED);
     }
 
     @Test
-    @DisplayName("예매 취소 실패 - 본인 예매가 아님")
-    void cancelReservation_Failure_NotOwnReservation() {
+    @DisplayName("예매 취소 실패 - 존재하지 않는 예매")
+    void cancelReservation_NotFound() {
+        // given
+        Long reservationId = 999L;
+        String userEmail = "test@example.com";
+
+        given(reservationRepository.findById(reservationId)).willReturn(Optional.empty());
+
+        // when & then
+        assertThatThrownBy(() ->
+                reservationService.cancelReservation(reservationId, userEmail)
+        )
+                .isInstanceOf(IllegalArgumentException.class)
+                .hasMessage("예매 내역이 존재하지 않습니다.");
+    }
+
+    @Test
+    @DisplayName("예매 취소 실패 - 권한 없음")
+    void cancelReservation_Unauthorized() {
         // given
         Long reservationId = 1L;
-        String userEmail = "another@example.com";
+        String userEmail = "other@example.com";
 
         given(reservationRepository.findById(reservationId)).willReturn(Optional.of(sampleReservation));
 
         // when & then
         assertThatThrownBy(() ->
-                reservationService.cancelReservation(reservationId, userEmail))
+                reservationService.cancelReservation(reservationId, userEmail)
+        )
                 .isInstanceOf(IllegalArgumentException.class)
-                .hasMessageContaining("본인의 예매만 취소할 수 있습니다");
+                .hasMessage("본인의 예매만 취소할 수 있습니다.");
     }
 
     @Test
-    @DisplayName("내 예매 내역 조회 테스트")
-    void findReservationsByUserEmail_Success() {
+    @DisplayName("예매 취소 실패 - 이미 취소된 예매")
+    void cancelReservation_AlreadyCancelled() {
+        // given
+        Long reservationId = 1L;
+        String userEmail = "test@example.com";
+        sampleReservation.cancelReservation(LocalDateTime.now());
+
+        given(reservationRepository.findById(reservationId)).willReturn(Optional.of(sampleReservation));
+
+        // when & then
+        assertThatThrownBy(() ->
+                reservationService.cancelReservation(reservationId, userEmail)
+        )
+                .isInstanceOf(IllegalStateException.class)
+                .hasMessage("이미 취소된 예매입니다.");
+    }
+
+    @Test
+    @DisplayName("사용자 이메일로 예매 조회")
+    void findReservationsByUserEmail() {
         // given
         String userEmail = "test@example.com";
-        List<Reservation> reservations = Arrays.asList(sampleReservation);
+        List<Reservation> reservations = List.of(sampleReservation);
 
         given(reservationRepository.findByUserEmail(userEmail)).willReturn(reservations);
 
@@ -142,30 +272,15 @@ public class ReservationServiceTest {
 
         // then
         assertThat(responses).hasSize(1);
-        assertThat(responses.get(0).getUserEmail()).isEqualTo(userEmail);
+        assertThat(responses.get(0).getReservationId()).isEqualTo(sampleReservation.getReservationId());
     }
 
     @Test
-    @DisplayName("내 예매 내역 조회 - 비어있는 경우")
-    void findReservationsByUserEmail_Empty() {
-        // given
-        String userEmail = "norecord@example.com";
-
-        given(reservationRepository.findByUserEmail(userEmail)).willReturn(Collections.emptyList());
-
-        // when
-        List<ReservationResponse> responses = reservationService.findReservationsByUserEmail(userEmail);
-
-        // then
-        assertThat(responses).isEmpty();
-    }
-
-    @Test
-    @DisplayName("콘서트별 예매 내역 조회 테스트")
-    void findReservationsByConcertId_Success() {
+    @DisplayName("공연 ID로 예매 조회")
+    void findReservationsByConcertId() {
         // given
         Long concertId = 100L;
-        List<Reservation> reservations = Arrays.asList(sampleReservation);
+        List<Reservation> reservations = List.of(sampleReservation);
 
         given(reservationRepository.findByConcertId(concertId)).willReturn(reservations);
 
@@ -178,8 +293,8 @@ public class ReservationServiceTest {
     }
 
     @Test
-    @DisplayName("예매 가능 여부 확인 테스트")
-    void checkAvailability_Success() {
+    @DisplayName("좌석 가용성 체크")
+    void checkAvailability() {
         // given
         Long concertId = 100L;
         Long quantity = 2L;
@@ -191,21 +306,5 @@ public class ReservationServiceTest {
 
         // then
         assertThat(available).isTrue();
-    }
-
-    @Test
-    @DisplayName("예매 가능 여부 확인 - 불가능 케이스")
-    void checkAvailability_Failure() {
-        // given
-        Long concertId = 100L;
-        Long quantity = 1000L;
-
-        given(concertServiceClient.checkAvailability(concertId, quantity)).willReturn(false);
-
-        // when
-        boolean available = reservationService.checkAvailability(concertId, quantity);
-
-        // then
-        assertThat(available).isFalse();
     }
 }
